--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Sport is also a major source of entertainment for non-participants, with spectat
 According to A.T. Kearney, a consultancy, the global sporting industry is worth up to $620 billion as of 2013.The world's most accessible
  and practised sport is running, while association football is the most popular spectator sport.
 <BR><BR><HR>
- <i> COPPIED FROM WIKIPIDIA<BR>
+ <i> information WAS gathered FROM WIKIPIDIA<BR>
 <A HREF="https://en.wikipedia.org/wiki/Sport">wikipidia</A>
 </BODY>
 </html>
